Remove a redundant internal feature flag: FixedContainerEdgeSamplingEnabled https://bugs.webkit.org/show_bug.cgi?id=290179 rdar://147580751
Reviewed by Aditya Keerthi.

Remove `FixedContainerEdgeSamplingEnabled`, and instead use the extant feature flag
`ContentInsetBackgroundFillEnabled` to determine whether we need to enable sampling.

See below for more details.

* LayoutTests/fast/page-color-sampling/basic-fixed-container-edge-sampling.html:
* LayoutTests/fast/page-color-sampling/color-sampling-ignores-backdrop-filters.html:
* LayoutTests/fast/page-color-sampling/color-sampling-ignores-images.html:
* LayoutTests/fast/page-color-sampling/color-sampling-ignores-non-fixed-content.html:
* LayoutTests/fast/page-color-sampling/color-sampling-ignores-text.html:
* LayoutTests/fast/page-color-sampling/color-sampling-includes-subframes.html:
* LayoutTests/fast/page-color-sampling/page-color-sampling-skips-border-top.html:

Adjust these layout tests to:
1. Turn on `ContentInsetBackgroundFillEnabled` instead of `FixedContainerEdgeSamplingEnabled`.
2. Set obscured insets on all relevant sides, for each test.

* LayoutTests/resources/ui-helper.js:
(window.UIHelper.async setObscuredInsets):

Augment this existing `UIHelper` method to work on macOS as well, and make it `async` to wait for
the next rendering update (and also the next visible content rect update, on iOS).

(window.UIHelper.setObscuredInsets): Deleted.
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

Remove the old feature flag. Also, make `ContentInsetBackgroundFillEnabled` compile on all
`PLATFORM(COCOA)`, such that we're still able to get coverage for `fast/page-color-sampling` on EWS,
even if system support for (part of) the content inset fill is missing.

* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::fixedContainerEdges const):

Make this take a `BoxSideSet` denoting which viewport sides we need to detect/sample. This allows us
to limit the work done here to _only_ edges with

--- a/LayoutTests/fast/page-color-sampling/basic-fixed-container-edge-sampling.html
+++ b/LayoutTests/fast/page-color-sampling/basic-fixed-container-edge-sampling.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- webkit-test-runner [ FixedContainerEdgeSamplingEnabled=true useFlexibleViewport=true ] -->
+<!DOCTYPE html> <!-- webkit-test-runner [ ContentInsetBackgroundFillEnabled=true useFlexibleViewport=true ] -->
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
@@ -68,6 +68,7 @@ async function showContainer(edge, expectedColors) {
 }
 
 addEventListener("load", async () => {
+    await UIHelper.setObscuredInsets(50, 50, 50, 50);
     await showContainer("top", { top: "rgb(0, 122, 255)", left: null, right: null, bottom: null });
 
     await showContainer("left", { top:
