--- a/LayoutTests/fast/page-color-sampling/color-sampling-ignores-images.html
+++ b/LayoutTests/fast/page-color-sampling/color-sampling-ignores-images.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- webkit-test-runner [ FixedContainerEdgeSamplingEnabled=true useFlexibleViewport=true ] -->
+<!DOCTYPE html> <!-- webkit-test-runner [ ContentInsetBackgroundFillEnabled=true useFlexibleViewport=true ] -->
 <html>
 <head>
     <meta charset="utf-8">
@@ -44,6 +44,7 @@
     jsTestIsAsync = true;
 
     addEventListener("load", async () => {
+        await UIHelper.setObscuredInsets(75, 0, 75, 0);
         await UIHelper.ensurePresentationUpdate();
         colors = await UIHelper.fixedContainerEdgeColors();
         shouldBeEqualToString("colors.top", "rgb(255, 99, 71)");
